src/components/input/Input.scss
@use 'hds-core';

.input-container {
  .input-header-container{
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding-bottom: 4px;
    margin-top: 20px;
  }
  .input-header {
    align-items: center;
    display: flex;
    font-weight: bold;
    justify-content: flex-start;
    z-index: 1;
    max-width: 70%;
    .input-title{
      display: flex;
      flex-flow: column;
      height: 100%;
      font-weight: 500;
    }
    .hide{
      display: none;
    }
    .input-locked{
      font-family: 'Helsinki Grotesk Medium', sans-serif;
      font-size: $size14;
      height: 18px;
      display:inline-flex;
      flex-direction: row-reverse;
      justify-content: flex-start;
      color:$color-info-dark;
      margin-top: 4px;
      margin-bottom: 8px;
      svg{
        height: 18px;
        width: 18px;
        margin-left: -4px;
      }
    }
    .input-editable{
      display:inline-flex;
      margin-left:5px;
      padding:5px;
      color:$color-bus;
      border:2px solid $color-bus;
    }
  }

  .input-header-icons {
    display: flex;
    margin-right: 8px;
    margin-left: 8px;

    @media screen and (min-width: 600px) {
      margin-right: 4px;
    }

    .input-info {
      background: url('./assets/icons/field-info-icon.svg') no-repeat center;
      width: $size16;
      height: $size16;
    }

    .input-history {
      font-weight: 100;
      color: lightgray;
      margin-right: 4px;
      flex: 1;
      display: flex;
      justify-content: flex-end;
      align-items: center;
      :nth-child(2) {
        margin: 2px 0 0 5px;
      }
    }
    
    .input-history-tooltip {
      display: flex;
      flex-direction: column;
      gap: 4px;
      
      .input-history-title {
        font-family: "Helsinki Grotesk", sans-serif;
        font-weight: 700;
        font-size: 14px;
        line-height: 24px;
        letter-spacing: 0%;
      }
      
      .input-history-details {
        font-family: "Helsinki Grotesk", sans-serif;
        font-weight: 400;
        font-size: 14px;
        line-height: 24px;
        letter-spacing: 0%;
      }
    }
  }
  .selection{
    div{
      button{
        svg{
          pointer-events: none !important;
        }
      }
    }
  }

  .rolling-info-container {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: "Helsinki Grotesk Medium", sans-serif;
    font-size: $size16;
    line-height: $size24;
    color: $color-black-90;
    padding-top: $size4;
    padding-bottom: $size12;
    height: 100%;

    .text-input{
      width: 80%;
      padding-left: $size16;

      .content{
        font-family: "Helsinki Grotesk Regular", sans-serif;
        font-size: $size16;
        opacity: 1 !important;
        border: none !important;
        color: $color-black-90;
        background: transparent;
        height: 100%;
        padding: 0;
        word-break: break-word;
      }

      .rolling-richtext{
        .ql-toolbar{
          display: none;
        }
        .ql-container{
          border:none;
          font-family: "Helsinki Grotesk Regular", sans-serif;
          font-size: $size16;
          .ql-editor{
            padding: 0;
            p{
              font-family: "Helsinki Grotesk Regular", sans-serif;
              font-size: $size16;
              opacity: 1 !important;
              border: none !important;
              background: transparent;
              height: 100%;
              padding: 0;
              word-break: break-word;
            }
          }
        }
      }
    }

    button {
      position: absolute;
      top: $size4;
      right: 0;
      font-size: $size16;
      align-self: flex-start;
      justify-self: flex-end;
    }

    .text-input-italic {
      width: 80%;
      padding-left: $size14;
      .content{
        font-family: "Helsinki Grotesk Regular", sans-serif;
        font-size: $size14;
        opacity: 1 !important;
        border: none !important;
        color: $max-markings-color;
        background: transparent;
        font-style: italic;
        height: 100%;
        padding: 0;
        word-break: break-word;
      }
      .rolling-richtext{
        .ql-toolbar{
          display: none;
        }
        .ql-container{
          border:none;
          font-family: "Helsinki Grotesk Regular", sans-serif;
          font-size: $size14;
          .ql-editor{
            padding: 0;
            p{
              font-family: "Helsinki Grotesk Regular", sans-serif;
              font-size: $size14;
              opacity: 1 !important;
              border: none !important;
              background: transparent;
              font-style: italic;
              height: 100%;
              padding: 0;
              word-break: break-word;
            }
          }
        }
      }
    }
  }

  .rolling-text{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-family: "Helsinki Grotesk Medium", sans-serif;
    font-size: $size14;
    color: $color_rolling_info;
    padding-left: $size12;
    padding-top: 0;

    svg {
      height: $size18;
    }
    span {
      padding-left: 0.125rem;
    }
  }

  .no-padding-left{
    padding-left: 0;
  }

  .max-chars-error{
    @include hds-error-notification;
    
    // Hide any manually added SVG icons since mixin provides icon via ::before
    svg {
      display: none;
    }
  }
}

.highligh-error{
  border: 4px solid $color-coat-of-arms;
  .input-header{
    animation: shake 1s ease 1;
  }
}

@keyframes shake {
	0%, 80% {transform: translateX(0);}
	30%, 70% {transform: translateX(-1.5px);}
	50% {transform: translateX(1.5px);}
}
/* ... */

